fix/style: fixed problems with horizontal scroll

--- a/src/styles/posts.scss
+++ b/src/styles/posts.scss
@@ -3,7 +3,7 @@
 .Container {
     background-color: $white-1;
     border-radius: 3px;
-    margin-top: 20px;
+    margin-top: 35px;
     width: 93%;
     max-width: 1860px;
     padding: 20px;
@@ -22,7 +22,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        margin: 10px 1px;
+        margin: 15px 1px 10px;
         height: 1.1rem;
         .PostContainer__Title {
             width: 20%;
